@@ -24,6 +24,7 @@ javaLibrary {
 }
 
 val apiReport by configurations.creating
+val standaloneConsoleLauncher by configurations.creating
 
 dependencies {
 	implementation(projects.junitJupiterApi) {
@@ -51,6 +52,8 @@ dependencies {
 	testImplementation(libs.classgraph) {
 		because("ApiReportGenerator needs it")
 	}
+
+	standaloneConsoleLauncher(projects.junitPlatformConsoleStandalone)
 }
 
 asciidoctorj {
@@ -89,10 +92,11 @@ gitPublish {
 	}
 }
 
-val generatedAsciiDocPath = file("$buildDir/generated/asciidoc")
-val consoleLauncherOptionsFile = File(generatedAsciiDocPath, "console-launcher-options.txt")
-val experimentalApisTableFile = File(generatedAsciiDocPath, "experimental-apis-table.txt")
-val deprecatedApisTableFile = File(generatedAsciiDocPath, "deprecated-apis-table.txt")
+val generatedAsciiDocPath = layout.buildDirectory.dir("generated/asciidoc")
+val consoleLauncherOptionsFile = generatedAsciiDocPath.map { it.file("console-launcher-options.txt") }
+val experimentalApisTableFile = generatedAsciiDocPath.map { it.file("experimental-apis-table.adoc") }
+val deprecatedApisTableFile = generatedAsciiDocPath.map { it.file("deprecated-apis-table.adoc") }
+val standaloneConsoleLauncherShadowedArtifactsFile = generatedAsciiDocPath.map { it.file("console-launcher-standalone-shadowed-artifacts.adoc") }
 
 val jdkJavadocBaseUrl = "https://docs.oracle.com/en/java/javase/11/docs/api"
 val elementListsDir = file("$buildDir/elementLists")
@@ -113,27 +117,51 @@ tasks {
 		val reportsDir = file("$buildDir/test-results")
 		outputs.dir(reportsDir)
 		outputs.cacheIf { true }
+
+		// Track OS as input so that tests are executed on all configured operating systems on CI
+		trackOperationSystemAsInput()
+
 		doFirst {
+			val debugging = findProperty("consoleLauncherTestDebug")?.toString()?.toBoolean() ?: false
 			val output = ByteArrayOutputStream()
 			val result = javaexec {
 				classpath = runtimeClasspath
 				mainClass.set("org.junit.platform.console.ConsoleLauncher")
 				args("--scan-classpath")
+				args("--config", "enableHttpServer=true")
 				args("--include-classname", ".*Tests")
 				args("--include-classname", ".*Demo")
 				args("--exclude-tag", "exclude")
 				args("--reports-dir", reportsDir)
 				systemProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager")
-				standardOutput = output
-				errorOutput = output
+				debug = debugging
+				if (!debugging) {
+					standardOutput = output
+					errorOutput = output
+				}
 				isIgnoreExitValue = true
 			}
-			if (result.exitValue != 0) {
+			if (result.exitValue != 0 && !debugging) {
 				System.out.write(output.toByteArray())
 				System.out.flush()
 			}
 			result.rethrowFailure().assertNormalExitValue()
 		}
+	}
+
+	register<JavaExec>("consoleLauncher") {
+		val reportsDir = file("$buildDir/console-launcher")
+		outputs.dir(reportsDir)
+		outputs.upToDateWhen { false }
+		classpath = sourceSets["test"].runtimeClasspath
+		mainClass.set("org.junit.platform.console.ConsoleLauncher")
+		args("--scan-classpath")
+		args("--config", "enableHttpServer=true")
+		args("--include-classname", ".*Tests")
+		args("--include-classname", ".*Demo")
+		args("--exclude-tag", "exclude")
+		args("--reports-dir", reportsDir)
+		systemProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager")
 	}
 
 	test {
@@ -164,9 +192,25 @@ tasks {
 		redirectOutput(deprecatedApisTableFile)
 	}
 
+	val generateStandaloneConsoleLauncherShadowedArtifactsFile by registering(Copy::class) {
+		from(zipTree(standaloneConsoleLauncher.elements.map { it.single().asFile })) {
+			include("META-INF/shadowed-artifacts")
+			includeEmptyDirs = false
+			eachFile {
+				relativePath = RelativePath(true, standaloneConsoleLauncherShadowedArtifactsFile.get().asFile.name)
+			}
+			filter { line -> "- `${line}`" }
+		}
+		into(standaloneConsoleLauncherShadowedArtifactsFile.map { it.asFile.parentFile })
+	}
+
 	withType<AbstractAsciidoctorTask>().configureEach {
-		dependsOn(generateConsoleLauncherOptions, generateExperimentalApisTable, generateDeprecatedApisTable)
-		inputs.files(consoleLauncherOptionsFile, experimentalApisTableFile, deprecatedApisTableFile)
+		inputs.files(
+			generateConsoleLauncherOptions,
+			generateExperimentalApisTable,
+			generateDeprecatedApisTable,
+			generateStandaloneConsoleLauncherShadowedArtifactsFile
+		)
 
 		resources {
 			from(sourceDir) {
@@ -193,6 +237,7 @@ tasks {
 				"consoleLauncherOptionsFile" to consoleLauncherOptionsFile,
 				"experimentalApisTableFile" to experimentalApisTableFile,
 				"deprecatedApisTableFile" to deprecatedApisTableFile,
+				"standaloneConsoleLauncherShadowedArtifactsFile" to standaloneConsoleLauncherShadowedArtifactsFile,
 				"outdir" to outputDir.absolutePath,
 				"source-highlighter" to "rouge",
 				"tabsize" to "4",
@@ -215,6 +260,14 @@ tasks {
 				attributes(mapOf("kotlinTestDir" to kotlin.srcDirs.first()))
 				inputs.dir(kotlin.srcDirs.first())
 			}
+		}
+
+		forkOptions {
+			// To avoid warning, see https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/597
+			jvmArgs(
+				"--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+				"--add-opens", "java.base/java.io=ALL-UNNAMED"
+			)
 		}
 	}
 
@@ -399,6 +452,10 @@ tasks {
 		}
 	}
 
+	check {
+		dependsOn(prepareDocsForUploadToGhPages)
+	}
+
 	gitPublishCopy {
 		dependsOn(prepareDocsForUploadToGhPages, createCurrentDocsFolder)
 	}
@@ -408,13 +465,15 @@ tasks {
 	}
 }
 
-fun JavaExec.redirectOutput(outputFile: File) {
+fun JavaExec.redirectOutput(outputFile: Provider<RegularFile>) {
 	outputs.file(outputFile)
 	val byteStream = ByteArrayOutputStream()
 	standardOutput = byteStream
 	doLast {
-		Files.createDirectories(outputFile.parentFile.toPath())
-		Files.write(outputFile.toPath(), byteStream.toByteArray())
+		outputFile.get().asFile.apply {
+			Files.createDirectories(parentFile.toPath())
+			Files.write(toPath(), byteStream.toByteArray())
+		}
 	}
 }
 
